[package]
name = "dh-middleman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
num-bigint = { version = "0.4.3", features = ["rand"] }
rand = "0.8.5"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.3"
clap = "3.0"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
